anneal/tests/fixtures/allow_sorry_fallbacks/expected.stderr
  ⚠ unused variable: `cond`
    ╭─[[PROJECT_ROOT]/src/lib.rs:72:36]
 71 │ /// ```
 72 │ pub unsafe fn expects_precondition(cond: bool) {}
    ·                                    ──┬─
    ·                                      ╰── 
 73 │ 
    ╰────
  help: if this is intentional, prefix it with an underscore

  ⚠ declaration uses `sorry`
    ╭─[[PROJECT_ROOT]/src/lib.rs:20:13]
 19 │ /// -- FIXME: Remove manual sorry once we support omitting proofs
 20 │ /// theorem spec :
    ·             ──┬─
    ·               ╰── here
 21 │ ///   Aeneas.Std.WP.spec (missing_user_bound) (fun ret_ => ret_ = ¬ ret_) := by
    ╰────

[External Info] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: spec : missing_user_bound ⦃ ret_ => (ret_ = true) = ¬ret_ = true ⦄
  ⚠ declaration uses `sorry`
    ╭─[[PROJECT_ROOT]/src/lib.rs:31:13]
 30 │ /// -- FIXME: Remove manual sorry once we support omitting proofs
 31 │ /// theorem spec :
    ·             ──┬─
    ·               ╰── here
 32 │ ///   Aeneas.Std.WP.spec (unprovable_is_valid) (fun ret_ => InvalidStruct.isValid ret_) := by
    ╰────

[External Info] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: spec : unprovable_is_valid ⦃ ret_ => ret_.isValid ⦄
  × simp_all made no progress
    ╭─[[PROJECT_ROOT]/src/lib.rs:43:7]
 42 │ ///   Aeneas.Std.WP.spec (trivial_is_valid) (fun ret_ => True) := by
 43 │ ///   simp_all
    ·       ────┬───
    ·           ╰── here
 44 │ /// ```
    ╰────

[External Info] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: spec : trivial_is_valid ⦃ ret_ => True ⦄
  × overloaded, errors
  │   63:7 Unknown identifier `invalid_tactic`
  │ 
  │   invalid {...} notation, structure type expected
  │     True
    ╭─[[PROJECT_ROOT]/src/lib.rs:52:13]
 51 │     ///   Aeneas.Std.WP.spec (explicit_broken_proof) (fun ret_ => True) := by
 52 │ ╭─▶ ///   exact {
 53 │ │   ///       invalid_tactic
 54 │ ├─▶ ///   }
    · ╰──── here
 55 │     /// ```
    ╰────

[External Info] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: spec : explicit_broken_proof ⦃ ret_ => True ⦄
  × Tactic `rfl` failed: The left-hand side
  │   explicit_semantic_failure
  │ is not definitionally equal to the right-hand side
  │   fun ret_ => True = False
  │ 
  │ ⊢ explicit_semantic_failure ⦃ ret_ => True = False ⦄
    ╭─[[PROJECT_ROOT]/src/lib.rs:63:7]
 62 │ ///   Aeneas.Std.WP.spec (explicit_semantic_failure) (fun ret_ => True = False) := by
 63 │ ///   rfl
    ·       ─┬─
    ·        ╰── here
 64 │ /// ```
    ╰────

[External Info] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: spec : explicit_semantic_failure ⦃ ret_ => True = False ⦄
  × Tactic `rfl` failed: The left-hand side
  │   false
  │ is not definitionally equal to the right-hand side
  │   true
  │ 
  │ ⊢ false = true
    ╭─[[PROJECT_ROOT]/src/lib.rs:78:58]
 77 │ ///   Aeneas.Std.WP.spec (fail_to_prove_precondition) (fun ret_ => True) := by
 78 │ ///   have h_call := expects_precondition.spec false (by rfl)
    ·                                                          ─┬─
    ·                                                           ╰── here
 79 │ ///   simp_all
    ╰────

  × simp_all made no progress
    ╭─[[PROJECT_ROOT]/src/lib.rs:79:7]
 78 │ ///   have h_call := expects_precondition.spec false (by rfl)
 79 │ ///   simp_all
    ·       ────┬───
    ·           ╰── here
 80 │ /// ```
    ╰────

[External Info] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: spec : fail_to_prove_precondition ⦃ ret_ => True ⦄
Error: Lean verification failed. Consider running `cargo anneal generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
